[package]
name = "runny_nose"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-windows-gui = "1.0"
native-windows-derive = "1.0"
serde = { version = "1.0", features = ["derive"] }
directories = "4.0"
toml = "0.5"
notify = "5.0"
once_cell = "1"

[build-dependencies]
embed-resource = "1.8"